Add support for composer

--- a/TestRequirements/Fixtures/composer-package/composer.json
+++ b/TestRequirements/Fixtures/composer-package/composer.json
@@ -11,6 +11,11 @@
             "PhpRepos\\ComposerPackage\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "require-dev": {
         "symfony/thanks": "^1.2"
     }
