--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -44,4 +44,4 @@ jobs:
         run: php phpkg credential github.com ${{ secrets.GITHUB_TOKEN }}
 
       - name: Execute tests
-        run: php test-runner --filter=InitCommandTest
+        run: php test-runner --filter=RunCommand
