--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,7 +41,7 @@ jobs:
           git submodule update
 
       - name: Set Credentials
-        run: php phpkg credential github.com ${{ secrets.GITHUB_TOKEN }}
+        run: php phpkg credential github.com ${{ secrets.PHPKG_GITHUB_TOKEN }}
 
       - name: Execute tests
         run: php test-runner
