--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,9 @@
 .gitattributes export-ignore
 .github export-ignore
 .gitignore export-ignore
-.gitmodules export-ignore
 CODE_OF_CONDUCT.md export-ignore
 CONTRIBUTING.md export-ignore
 LICENSE export-ignore
 README.md export-ignore
 /Tests export-ignore
-/TestRequirements export-ignore
+/DummyProject export-ignore
