--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           cd builds/production
           rm -fR .github
-          rm -fR TestRequirements
+          rm -fR DummyProject
           rm -fR Tests
           rm -f credentials.json
           rm -f .gitattributes
