Make sure DummyProject directory exists for running tests

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install dependencies
         run: phpkg install
 
+      - name: Prepare test env
+        run: mkdir DummyProject
+
       - name: Build
         run: phpkg build production
 
