--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,6 +16,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         php: [8.3, 8.4, 8.5]
+        exclude:
+          - os: windows-latest
+            php: 8.3
+          - os: windows-latest
+            php: 8.4
 
     name: P${{ matrix.php }} - ${{ matrix.os }}
 
