Use test-runner 4 for linux and mac

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -124,7 +124,7 @@ jobs:
         run: |
           cd build
           ./phpkg flush
-          ./phpkg run test-runner
+          ./phpkg run test-runner --version=v4.0.0 run
 
       - name: Execute tests (Windows)
         if: runner.os == 'Windows'
