--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -90,6 +90,7 @@ jobs:
           phpkg build production
           rm phpkg.config-lock.json
           mv phpkg.config-lock.json.v3 phpkg.config-lock.json
+          rm -fR Packages
           cd builds/production
           ./phpkg install --project=../../
           ./phpkg build --project=../../
@@ -102,6 +103,7 @@ jobs:
           phpkg build production
           rm phpkg.config-lock.json
           mv phpkg.config-lock.json.v3 phpkg.config-lock.json
+          rm -fR Packages
           cd builds/production
           php ./phpkg install --project=../../
           php ./phpkg build --project=../../
