--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -22,6 +22,7 @@ jobs:
           phpkg build production
           rm phpkg.config-lock.json
           mv phpkg.config-lock.json.v3 phpkg.config-lock.json
+          rm -fR Packages
           cd builds/production
           ./phpkg install --project=../../
           ./phpkg build --project=../../
