--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -24,6 +24,7 @@ jobs:
           mv phpkg.config-lock.json.v3 phpkg.config-lock.json
           rm -fR Packages
           cd builds/production
+          ./phpkg credential github.com ${{ secrets.PHPKG_GITHUB_TOKEN }}
           ./phpkg install --project=../../
           ./phpkg build --project=../../
       - name: Remove unnecessary files
