--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -20,13 +20,11 @@ jobs:
         run: |
           phpkg install
           phpkg build production
-          rm phpkg.config-lock.json
-          mv phpkg.config-lock.json.v3 phpkg.config-lock.json
           rm -fR Packages
-          cd builds/production
+          cd build
           ./phpkg credential github.com ${{ secrets.PHPKG_GITHUB_TOKEN }}
-          ./phpkg install --project=../../
-          ./phpkg build --project=../../
+          ./phpkg install --project=../
+          ./phpkg build --project=../
       - name: Remove unnecessary files
         run: |
           cd build
