--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -47,6 +47,7 @@ jobs:
           echo "PATH=\$PATH:$HOME/.phpkg" >> $GITHUB_PATH
 
       - name: Test installation (Unix)
+        if: runner.os != 'Windows'
         run: phpkg version
 
       - name: Install phpkg (Windows)
@@ -63,9 +64,7 @@ jobs:
           echo "$phpkgPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           # Verify phpkg is available
           $env:Path = [System.Environment]::GetEnvironmentVariable("Path", "Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path", "User")
-
-      - name: Test installation (Windows)
-        run: phpkg version
+          phpkg version
 
       - name: Set Credentials for main PHPKG (Unix)
         if: runner.os != 'Windows'
