Fix workflow to rename the first build directory to current to let the second build work on the same directory

--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -19,9 +19,10 @@ jobs:
       - name: Build project
         run: |
           phpkg install
-          phpkg build production
+          phpkg build
           rm -fR Packages
-          cd build
+          mv build latest
+          cd latest
           ./phpkg credential github.com ${{ secrets.PHPKG_GITHUB_TOKEN }}
           ./phpkg install --project=../
           ./phpkg build --project=../
