--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -93,7 +93,8 @@ jobs:
         run: |
           phpkg build
           rm -fR Packages
-          cd build
+          mv build current
+          cd current
           ./phpkg credential github.com ${{ secrets.PHPKG_GITHUB_TOKEN }}
           ./phpkg install --project=../
           ./phpkg build --project=../
@@ -105,7 +106,8 @@ jobs:
           $env:Path = [System.Environment]::GetEnvironmentVariable("Path", "Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path", "User")
           phpkg build
           Remove-Item -Path "Packages" -Recurse -Force
-          cd build
+          Move-Item -Path "build" -Destination "current"
+          cd current
           php ./phpkg credential github.com ${{ secrets.PHPKG_GITHUB_TOKEN }}
           php ./phpkg install --project=../
           php ./phpkg build --project=../
